objects/vlocity_cmt__StatementLineItem__c.object
<CustomObject>
    <description>Individual line items constituting an account&apos;s statement are imported from the client&apos;s billing system and retained here.</description>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <formula>vlocity_cmt__StatementId__r.vlocity_cmt__AccountId__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountName__c</fullName>
        <description>DEPRECATED for compatibility with Salesforce Shield.</description>
        <formula>Text(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Statement Line Items</relationshipLabel>
        <relationshipName>StatementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrencyAmount__c</fullName>
        <label>Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentMonthToDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Month To Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Indicator__c</fullName>
        <label>Indicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTime__c</fullName>
        <label>One Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Recurring__c</fullName>
        <label>Recurring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RichText__c</fullName>
        <label>Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceID__c</fullName>
        <label>Service ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceName__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceStartDate__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementDate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementGroup__c</fullName>
        <label>Statement Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <label>Statement</label>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Statement Line Items</relationshipLabel>
        <relationshipName>StatementLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Subtype__c</fullName>
        <label>Subtype</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UOM__c</fullName>
        <label>UOM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Usage__c</fullName>
        <label>Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Statement Line Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>vlocity_cmt__AccountId__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__ServiceEndDate__c</columns>
        <columns>vlocity_cmt__StatementId__c</columns>
        <columns>Threshold__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__Usage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLI-{000000000}</displayFormat>
        <label>Statement Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>